istio/infra/alb-tls-plaintext/helm/gateway-api/gatewayclass.yaml
# GatewayClass for AWS Load Balancer Controller
# This tells Kubernetes to use the AWS LB Controller to provision load balancers
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-alb
spec:
  controllerName: gateway.k8s.aws/alb
